virtual keyboard: Improve theme support, clean up fixed-element definitions, remove emoji support, fix suggestions visibility.
- Non-alpha keys were not visually 'reacting' to clicks.
- The emoji input, already disabled in x11 sessions, is also more
  or less useless in Wayland sessions, as most apps won't accept
  their input.
- Update the Suggestions row visibility when the layout changes.

--- a/data/theme/cinnamon-sass/widgets/_keyboard.scss
+++ b/data/theme/cinnamon-sass/widgets/_keyboard.scss
@@ -1,56 +1,55 @@
 /* On-screen Keyboard */
 
 $key_border_radius: $base_border_radius + 3px;
-$key_bg_color:  $bg_color;
-$default_key_bg_color: darken($base_color, 11%);
 
-#keyboard {
+$default_key_bg_color: $bg_color;
+$non_alpha_key_color: $light_bg_color;
+$shifted_key_color: $lightest_bg_color;
+
+#virtual-keyboard {
   background-color: transparentize(darken($bg_color, 5%), 0.1);
   box-shadow: inset 0 1px 0 0 $borders_color;
-
-  .page-indicator {
-    padding: $base_padding;
-
-    .page-indicator-icon {
-      width: 8px;
-      height: 8px;
-    }
-  }
 }
 
 // the container for individual keys
-.key-container {
+.vkeyboard-key-container {
   padding: $base_margin;
   spacing: $base_margin;
 }
 
 // the keys
-.keyboard-key {
+.vkeyboard-key {
 
-  @include button(normal, $c:$key_bg_color);
+  @include button(normal);
 
   &:focus { @include button(focus);}
-  &:hover, &:checked { @include button(hover, $c: $key_bg_color);}
-  &:active { @include button(active, $c: $key_bg_color); }
+  &:hover, &:checked { @include button(hover);}
+  &:active { @include button(active); }
 
   @include fontsize(20px);
   border-width: 1px;
   border-style: solid;
   border-radius: $key_border_radius;
 
-  &:grayed { //FIXMEy
-    background-color: darken($bg_color, 3%);
-    color: $fg_color;
-    border-color: $borders_color;
+  background-color: $lighter_bg_color;
+
+  &.shift-key-lowercase, &.escape-key, &.hide-key, &.non-alpha-key {
+    background-color: $non_alpha_key_color;
+
+    &:focus { @include button(focus);}
+    &:hover, &:checked { @include button(hover);}
+    &:active { @include button(active); }
+
   }
 
-  &.shilllft-key-uppercase { color: $light_bg_color }
+  &.shift-key-uppercase { background-color: $shifted_key_color }
+  &.enter-key { background-color: $accent_bg_color }
 
   StIcon { icon-size: 1.125em; }
 }
 
 // long press on a key popup
-.keyboard-subkeys {
+.vkeyboard-subkeys {
   color: $fg_color;
   -arrow-border-radius: $base_border_radius;
   -arrow-background-color: $bg_color;
@@ -59,32 +58,6 @@ $default_key_bg_color: darken($base_color, 11%);
   -arrow-base: 20px;
   -arrow-rise: 10px;
   -boxpointer-gap: $base_padding;
-
-  .keyboard-key {
-    @include button(normal, $c:$key_bg_color);
-
-    &:focus { @include button(focus);}
-    &:hover, &:checked { @include button(hover, $c: $key_bg_color);}
-    &:active { @include button(active, $c: $key_bg_color); }
-
-    border-radius:$base_border_radius;
-  }
-}
-
-// emoji
-.emoji-page {
-  .keyboard-key {
-    background-color: transparent;
-    border: none;
-    color: initial;
-  }
-}
-
-.emoji-panel {
-  .keyboard-key:latched {
-    border-color: lighten($light_bg_color, 5%);
-    background-color: $light_bg_color;
-  }
 }
 
 // suggestions
